# emissary

./: .gitignore  Cargo.toml
emissary-c/: BUILD.md  Cargo.toml  Makefile  README.md  build.rs  emissary-c.h
emissary-c/examples/: simple_usage.c
emissary-c/src/: lib.rs
emissary-core/src/: config.rs
